Fix overflow

--- a/style.css
+++ b/style.css
@@ -7,17 +7,19 @@
 body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .container {
     width: 386px;
-    height: 520px;
+    min-height: 520px;
     margin: 0px auto;
     font-size: 32px;
     background-color: #5C5470;
     border-radius: 16px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,12 +28,13 @@ body {
 }
 
 .ans {
-    height: 128px;
+    min-height: 128px;
     width: 344px;
     background-color: #B9B4C7;
     text-align: right;
     padding: 8px 16px;
     border-radius: 8px;
+    overflow-wrap: break-word;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
